--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/logs/logs",
-    "pages/upload/upload"
+    "pages/upload/upload",
+    "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "light",
