--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
 	"appid": "wx28f762098be82ef0",
-	"projectname": "wechat-workspace",
+	"projectname": "wechatpaper",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
